Add dashboard toggle between wrist control and limelight align

--- a/src/main/dashboard/style.css
+++ b/src/main/dashboard/style.css
@@ -23,3 +23,9 @@ div {
   #cshipm {
       width: 30vw;
   }
+
+  #message img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
