Fix dashboard LL feed; retune wrist zeroing

--- a/src/main/dashboard/style.css
+++ b/src/main/dashboard/style.css
@@ -50,3 +50,9 @@ span {
 .green { 
     color: green;
 }
+
+#ll-feed-canvas {
+    width: 30vw;
+    height: 22.5vw;
+    border: 1px solid black;
+}
